--- a/app.json
+++ b/app.json
@@ -5,15 +5,24 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "polyglotpal",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "icon": "./assets/images/icon.png",
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.polyglotpal.app"
     },
     "android": {
-      "icon": "./assets/images/adaptive-icon.png",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
       "package": "com.polyglotpal.app"
     },
     "web": {
@@ -21,14 +30,18 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "platforms": ["ios", "android", "web"],
+
+    "extra": {
+      "apiUrl": "https://polyglotpall.onrender.com/api",
+      "apiUrlLocal": "http://192.168.1.104:3000/api",
+      "router": {},
+      "eas": {
+        "projectId": "f77d0c2a-47db-46f9-8e9e-29235ac69848"
+      }
+    },
     "experiments": {
       "typedRoutes": true
-    },
-    "extra": {
-      "apiUrl": "http://192.168.1.102:3000/api"
     }
   }
 }
