--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@expo/webpack-config": "^19.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.1.10",
     "expo": "^53.0.0",
     "expo-checkbox": "~4.1.4",
-    "expo-dev-client": "~5.2.0",
+    "expo-dev-client": "^5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -32,6 +33,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -41,6 +43,7 @@
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "~29.7.0",
     "jest-expo": "^53.0.0",
