--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "PolyGlotPal",
-    "slug": "polyglotpal",
+    "name": "PolyglotPal",
+    "slug": "polyglot-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -16,21 +16,26 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.polyglotpal.app"
+      "bundleIdentifier": "com.elifmac.polyglotpal"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.polyglotpal.app"
+      "package": "com.elifmac.polyglotpal"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/favicon.png"
     },
     "platforms": ["ios", "android", "web"],
+    "experiments": {
+      "typedRoutes": true
+    }
+  },
+
 
     "extra": {
       "apiUrl": "https://polyglotpall.onrender.com/api",
