--- a/.github/workflows/sbom-upload.yml
+++ b/.github/workflows/sbom-upload.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Upload SBOM to Dependency-Track
         env:
-          DTRACK_API_KEY: odt_LDf2fftm_2CPSOVvpZ9if2wegtyyv6XiGvuTi7Ht5
-          DTRACK_API_URL: "http://10.135.6.229:8080/api/v1"
+          DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
+          DTRACK_API_URL: "http://10.135.6.229:8080"
         run: |
           curl -X POST "$DTRACK_API_URL/api/v1/bom" \
             -H "X-Api-Key: $DTRACK_API_KEY" \
