--- a/.github/workflows/sbom-upload.yml
+++ b/.github/workflows/sbom-upload.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install --save-dev @cyclonedx/bom
 
       - name: Generate SBOM file
-        run: npx cyclonedx-bom -o bom.json
+        run: cyclonedx-bom -o bom.json
 
       - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
